# chromadb-data-pipes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CODEOWNERS  Dockerfile  LICENSE.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-images.yml  cdp-action-test.yaml  mkdocs.yml  release.yml  test.yaml
adr/ADR-20240120-CLI-Naming/: index.html
auth/: index.html
chroma_dp/: __init__.py  main.py
chroma_dp/chroma/: __init__.py  chroma_export.py  chroma_import.py
chroma_dp/huggingface/: __init__.py  hf_export.py  hf_import.py  utils.py
chroma_dp/processor/: chunk.py  embed.py  id.py  langchain_utils.py  metadata.py
chroma_dp/processor/misc/: emoji_clean.py
chroma_dp/producer/file/: csv.py  pdf.py  text.py
chroma_dp/producer/langchain/: __init__.py
chroma_dp/producer/qdrant/: __init__.py
chroma_dp/producer/test/: perf.py
chroma_dp/producer/url/: url_loader.py
chroma_dp/transformers/: embed.py
chroma_dp/utils/: __init__.py  chroma.py  embedding.py  multithreading.py  templating.py
chromadb_hfds/: __main__.py  chroma_export.py  chroma_import.py  import.py
concepts/: index.html
docs/: CNAME  auth.md  concepts.md  index.md
docs/adr/: ADR-20240120-CLI-Naming.md
docs/import/: chroma_import.md
docs/javascripts/: gtag.js
docs/processors/: chunking.md  cleaning.md  embedding.md  id.md  metadata.md
docs/producers/: csv.md  pdf.md  text.md  url.md
notebooks/: test-qdrant.ipynb
processors/chunking/: index.html
processors/cleaning/: index.html
processors/embedding/: index.html
processors/id/: index.html
processors/metadata/: index.html
producers/csv/: index.html
producers/pdf/: index.html
producers/text/: index.html
producers/url/: index.html
sample-data/: server.htpasswd
sample-data/chroma/chroma-data-single/: chroma.sqlite3
sample-data/csv/: employees_with_resumes.csv
sample-data/metadata/: metadata.jsonl
sample-data/text/: about.md  contributing.md  embeddings.md  intro.md  migration.md  multi-modal.md  production.md  roadmap.md  troubleshooting.md  usage-guide.md
scripts/: start_qdrant.sh
search/: search_index.json
tests/chroma/: chroma_export.py  chroma_import.py
tests/hf/: test_generator.py  test_hf_export.py  test_hf_import.py  test_uri.py
tests/processors/: test_metadata.py
tests/utils/: chroma.py
